TaskTracker-nginxkube/phpmyadmin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
  selector:
    app: phpmyadmin
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
# ---
#   apiVersion: apps/v1
#   kind: Deployment
#   metadata:
#     name: php-fpm-deployment
#   spec:
#     replicas: 1
#     selector:
#       matchLabels:
#         app: php-fpm
#     template:
#       metadata:
#         labels:
#           app: php-fpm
#       spec:
#         containers:
#           - name: php-fpm
#             image: php:7-fpm
#             ports:
#               - containerPort: 9000
