TaskTracker-nginxkube/ingress.yml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: node-server-ingress
    namespace: default
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/use-regex: "true"
  spec:
    ingressClassName: nginx
    rules:
      - host: tote.com
        http:
          paths:
            - path: /phpmyadmin(/|$)(.*)
              pathType: ImplementationSpecific
              backend:
                service:
                  name: phpmyadmin-service
                  port:
                    number: 80
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: node-server-service
                  port:
                    number: 5000
            - path: /redis
              pathType: Prefix
              backend:
                service:
                  name: redis-service
                  port:
                    number: 6379
